@@ -15,7 +15,7 @@
             <div class="input-group d-inline-block mb-4 pl-2" style="flex-wrap: nowrap">
                 <mat-checkbox [color]="'primary'" class="mr-1 align-center" style="line-height: 1;" [(ngModel)]="isPublished">
                 </mat-checkbox>
-                Mark item as published item
+                Mark as published
             </div>
 
             <ul *ngIf="!isUploadValid()" class="mb-3 list-unstyled alert alert-danger">
