@@ -186,10 +186,14 @@
                                     Mark as New
                                 </div>
                                 <div class="input-group" style="flex-wrap: nowrap">
-
                                     <mat-checkbox [color]="'primary'" class="mr-1" formControlName="isPublished">
                                     </mat-checkbox>
-                                    Mark item as published item
+                                    Mark as published
+                                </div>
+                                <div class="input-group" style="flex-wrap: nowrap">
+                                    <mat-checkbox [color]="'primary'" class="mr-1" formControlName="isOffer">
+                                    </mat-checkbox>
+                                    Mark as offer
                                 </div>
                                 <!-- <div class="input-group" style="flex-wrap: nowrap">
                                     <mat-checkbox [color]="'primary'" class="mr-1" formControlName="isPriceDisplayed">
