@@ -141,10 +141,18 @@
                     </tr>
                     <tr>
                         <td class="pr-3">
-                            <span>Mark as published item</span>
+                            <span>Mark as published</span>
                         </td>
                         <td class="pt-1 text-right">
                             <mat-checkbox [color]="'primary'" formControlName="isPublished"></mat-checkbox>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="pr-3">
+                            <span>Mark as offer</span>
+                        </td>
+                        <td class="pt-1 text-right">
+                            <mat-checkbox [color]="'primary'" formControlName="isOffer"></mat-checkbox>
                         </td>
                     </tr>
                     <!-- <tr>
